--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
 
 
     <Button
+        android:textAlignment="center"
         android:id="@+id/btnviewbinding"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
